# dcplusplus

./: .bzrignore  ADC-EXT.txt  ADC.conf  ADC.txt  COPYING.TXT  Compile.txt  DCPlusPlus.dsp  DCPlusPlus.dsw  DCPlusPlus.nsi  DCPlusPlus.rc  DCPlusPlus.sln  DCPlusPlus.vcproj  Doxyfile  Example.xml  Extensions.txt  FileListing.xsd  License.txt  Makefile.am  SConstruct  acinclude.m4  bootstrap  build_util.py  bzip2.dsp  bzip2.vcproj  changelog.txt  client.dsp  client.vcproj  configure.ac  dcppboot.xml  makedefs.py  readme.txt  release.cmd  release.sh  tag.sh  update-languages.sh  x2po.py  zlib.dsp  zlib.vcproj
DCPlusPlus/: DCPlusPlus.nsi  DCPlusPlus.rc  Extensions.txt  License.txt  bzip2.vcproj  makedefs.py
DCPlusPlus/bzip2/: bzlib.c
DCPlusPlus/client/: ADLSearch.cpp  ADLSearch.h  AdcCommand.cpp  AdcHub.cpp  AdcHub.h  BitInputStream.h  BloomFilter.h  BufferedSocket.h  Client.cpp  ConnectionManager.h  CriticalSection.h  CryptoManager.cpp  DownloadManager.h  FastAlloc.h  FavoriteManager.cpp  File.cpp  FinishedManager.h  HashValue.h  MerkleCheckOutputStream.h  MerkleTree.h  NmdcHub.cpp  NmdcHub.h  QueueItem.h  QueueManager.h  SFVReader.h  ServerSocket.h  SettingsManager.cpp  SettingsManager.h  SimpleXML.h  Socket.cpp  Socket.h  StringSearch.h  StringTokenizer.h  Text.cpp  Text.h  Thread.cpp  TigerHash.h  UploadManager.h  UserConnection.cpp  ZUtils.cpp  (+3 more)
DCPlusPlus/help/: Links.html  adlsearch.html  credits.html  faq_activemode.html  faq_keyboard_commands.html  faq_secret.html  favorite_users.html  help.vcproj  plusplus_tag.html  settings_colors_and_sounds.html  settings_logs.html  template.html
DCPlusPlus/windows/: ADLSProperties.cpp  ADLSearchFrame.cpp  Advanced3Page.cpp  Advanced3Page.h  AdvancedPage.cpp  Appearance2Page.h  CommandDlg.cpp  DirectoryListingFrm.h  DownloadPage.cpp  FavoriteDirsPage.h  FinishedFrame.cpp  FinishedFrameBase.h  LineDlg.h  MainFrm.cpp  NetworkPage.h  (+18 more)
MakeDefs/: MakeDefs.cpp  MakeDefs.dsp  MakeDefs.vcproj  StdAfx.h
VC7.0-Project/: DCPlusPlus.vcproj  client.vcproj
boost/: Readme.txt  SConscript
bzip2/: SConscript  blocksort.c  bzip2.c  bzip2.vcproj  bzlib.c  bzlib.h
client/: ADLSearch.cpp  ADLSearch.h  AboutDlg.h  AdcCommand.cpp  AdcCommand.h  AdcHub.cpp  AdcHub.h  Advanced2Page.cpp  Advanced2Page.h  AdvancedPage.cpp  AdvancedPage.h  AppearancePage.cpp  AppearancePage.h  AtlCmdBar2.h  BZUtils.cpp  BZUtils.h  BitInputStream.cpp  BitInputStream.h  BitOutputStream.cpp  BitOutputStream.h  BloomFilter.h  BufferedSocket.cpp  BufferedSocket.h  CID.h  Client.cpp  Client.h  ClientListener.cpp  ClientListener.h  ClientManager.cpp  ClientManager.h  ClientManagerListener.h  ConnectionManager.cpp  ConnectionManager.h  ConnectionManagerListener.h  CriticalSection.cpp  CriticalSection.h  CryptoManager.cpp  CryptoManager.h  DCClient.cpp  DCClient.h  (+158 more)
dcpp/: ADLSearch.cpp  ADLSearch.h  AdcCommand.cpp  AdcCommand.h  AdcHub.cpp  AdcHub.h  BZUtils.cpp  BZUtils.h  BitInputStream.h  BitOutputStream.h  BloomFilter.h  BufferedSocket.cpp  BufferedSocket.h  BufferedSocketListener.h  CID.h  Client.cpp  Client.h  ClientListener.h  ClientManager.cpp  ClientManager.h  ClientManagerListener.h  ConnectionManager.cpp  ConnectionManager.h  ConnectionManagerListener.h  CriticalSection.h  CryptoManager.cpp  CryptoManager.h  DCPlusPlus.cpp  DCPlusPlus.h  DirectoryListing.cpp  DirectoryListing.h  Download.cpp  Download.h  DownloadManager.cpp  DownloadManager.h  DownloadManagerListener.h  Encoder.cpp  Encoder.h  Exception.cpp  Exception.h  (+95 more)
dwt/: License.txt  SConscript  readme.txt
help/: DCPlusPlus.hhp  Links.html  adlsearch.html  changelog.html  chat_commands.html  compile.cmd  credits.html  cshelp.h  cshelp.txt  cshelp_stub.html  dev_applypatch.html  dev_createpatch.html  dialog_adls_properties.html  dialog_favorite_hub.html  dialog_indexing_progress.html  dialog_public_hub_lists.html  dialog_user_command.html  faq_activemode.html  faq_different_icons.html  faq_install.html  faq_keyboard_commands.html  faq_nosearch.html  faq_secret.html  faq_slowdownload.html  faq_units.html  faq_university.html  faq_upnp.html  favorite_hubs.html  favorite_users.html  fdl.html  gen_changelog.pl  gen_changelog.py  gen_cshelp.py  help.vcproj  index.html  keyboard_commands.html  links.html  netiquette.html  non-routable.html  office11.css  (+42 more)
intl/: SConscript
openssl/: readme.txt
res/: DCPlusPlus.Manifest
smartwin/: License.txt  readme-dcpp.txt
win32/: ADLSProperties.cpp  ADLSProperties.h  ADLSearchFrame.cpp  ADLSearchFrame.h  AboutDlg.cpp  AboutDlg.h  Advanced3Page.cpp  Advanced3Page.h  AdvancedPage.cpp  AdvancedPage.h  Appearance2Page.cpp  Appearance2Page.h  AppearancePage.cpp  AppearancePage.h  AspectSpeaker.h  AspectStatus.h  AspectUserCommand.h  CertificatesPage.cpp  CertificatesPage.h  ComboBox.cpp  ComboBox.h  CommandDlg.cpp  CommandDlg.h  DCPlusPlus.rc  DirectoryListingFrame.cpp  DirectoryListingFrame.h  DirectoryListingFrm.cpp  DirectoryListingFrm.h  DownloadPage.cpp  DownloadPage.h  DownloadsFrame.cpp  DownloadsFrame.h  ExListViewCtrl.cpp  ExListViewCtrl.h  ExtendedTrace.cpp  FavHubProperties.cpp  FavHubProperties.h  FavHubsFrame.cpp  FavHubsFrame.h  FavoriteDirsPage.cpp  (+113 more)
windows/: ADLSProperties.cpp  ADLSProperties.h  ADLSearchFrame.cpp  ADLSearchFrame.h  AboutDlg.h  Advanced2Page.cpp  Advanced2Page.h  Advanced3Page.cpp  Advanced3Page.h  AdvancedPage.cpp  AdvancedPage.h  Appearance2Page.cpp  Appearance2Page.h  AppearancePage.cpp  AppearancePage.h  CertificatesPage.cpp  CertificatesPage.h  CommandDlg.cpp  CommandDlg.h  DirectoryListingFrm.cpp  DirectoryListingFrm.h  DownloadPage.cpp  DownloadPage.h  ExListViewCtrl.cpp  ExListViewCtrl.h  ExtendedTrace.cpp  ExtendedTrace.h  FavHubProperties.cpp  FavHubProperties.h  FavoriteDirsPage.cpp  FavoriteDirsPage.h  FavoritesFrm.cpp  FavoritesFrm.h  FinishedFrame.cpp  FinishedFrame.h  FinishedFrameBase.h  FinishedULFrame.cpp  FinishedULFrame.h  FlatTabCtrl.h  GeneralPage.cpp  (+67 more)
yassl/: README  SConscript  yassl.vcproj
zlib/: SConscript  adler32.c  compress.c  crc32.c  deflate.c  deflate.h  trees.c  uncompr.c  zconf.h  zlib.h  zutil.c  zutil.h
(+1188 files in other folders)
